# agent-manager

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  package-lock.json
agent-framework/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
agent-framework/docs/: agent-framework-deploy.md  agent-framework-design.md  agent-framework-test.md  checkpoint-design.md
agent-framework/server/: app.py  config.py  main.py  wsgi.py
agent-framework/server/models/: a2a_types.py  oaf_types.py
agent-framework/server/routes/: a2a_routes.py  agent_card.py  debug_ui.py  mcp_routes.py  thread_routes.py
agent-framework/server/services/: a2ui_service.py  agent_runtime.py  chat_model.py  checkpoint_manager.py  custom_tool_manager.py  mcp_manager.py  oaf_loader.py  skill_manager.py
agent-framework/server/templates/: debug_page.html
agent-framework/tests/: conftest.py
agent-framework/tests/e2e/: test_custom_tool.py  test_mcp_e2e.py  test_skill_e2e.py  test_streaming.py  test_tool_bash.py
agent-framework/tests/fixtures/full-agent/: AGENTS.md
agent-framework/tests/fixtures/full-agent/custom-tools/: echo.py
agent-framework/tests/fixtures/minimal-agent/: AGENTS.md
agent-framework/tests/integration/: test_checkpoint_integration.py  test_server_integration.py
agent-framework/tests/unit/: test_a2a_routes.py  test_a2ui_service.py  test_agent_runtime.py  test_checkpoint_manager.py  test_config.py  test_custom_tool_manager.py  test_mcp_manager.py  test_oaf_loader.py  test_skill_manager.py
(+133 files in other folders)
